--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-notification-system": "^0.3.0",
+    "react-notification-system-redux": "^2.0.0",
+    "react-redux": "^7.1.3",
+    "react-scripts": "3.3.0",
+    "reactstrap": "^8.3.2",
+    "redux": "^4.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=5001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
